--- a/views/residences.html
+++ b/views/residences.html
@@ -75,20 +75,20 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="blockNo">Block No</label>
-                            <input class="form-control" id="blockNo" type="text" placeholder="Block 8" ng-model="vm.residence.blockNo">
+                            <input class="form-control" id="blockNo" type="text" placeholder="8" ng-model="vm.residence.blockNo">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="lotNo">Lot No</label>
-                            <input class="form-control" id="lotNo" type="text" placeholder="Lot 1" ng-model="vm.residence.lotNo">
+                            <input class="form-control" id="lotNo" type="text" placeholder="1" ng-model="vm.residence.lotNo">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="street">Street</label>
-                            <input class="form-control" id="street" type="text" placeholder="Adela St." ng-model="vm.residence.street">
+                            <input class="form-control" id="street" type="text" placeholder="Adela" ng-model="vm.residence.street">
                         </div>
                     </div>
                     </div>
@@ -104,7 +104,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="subdivision">Subdivision</label>
-                            <input class="form-control" id="subdivision" type="text" placeholder="FZO Subdivision" ng-model="vm.residence.subdivision">
+                            <input class="form-control" id="subdivision" type="text" placeholder="FZO" ng-model="vm.residence.subdivision">
                         </div>
                     </div>
 
@@ -112,7 +112,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="brgy">Barangay</label>
-                            <input class="form-control" id="brgy" type="text" placeholder="Brgy 1" ng-model="vm.residence.brgy">
+                            <input class="form-control" id="brgy" type="text" placeholder="1" ng-model="vm.residence.brgy" disabled>
                         </div>
                     </div>
 
@@ -122,20 +122,20 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="city">City</label>
-                            <input class="form-control" id="city" type="text" placeholder="Kabankalan City" ng-model="vm.residence.city">
+                            <input class="form-control" id="city" type="text" placeholder="Kabankalan" ng-model="vm.residence.city" disabled>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="province">Province</label>
-                            <input class="form-control" id="province" type="text" placeholder="Negros Occidental" ng-model="vm.residence.province">
+                            <input class="form-control" id="province" type="text" placeholder="Negros Occidental" ng-model="vm.residence.province" disabled>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="zip">Zip Code</label>
-                            <input class="form-control" id="zip" type="text" placeholder="6111" ng-model="vm.residence.zip">
+                            <input class="form-control" id="zip" type="text" placeholder="6111" ng-model="vm.residence.zip" disabled>
                         </div>
                     </div>
 
