latest commit - jonpecson

--- a/views/brgy-bus-clearance-list.html
+++ b/views/brgy-bus-clearance-list.html
@@ -13,8 +13,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-md-offset-5">
-            <button class="btn btn-block btn-primary" ng-click="toggleModal()">New Residence</button>
+         <div class="col-md-3 col-md-offset-6">
+            <button class="btn btn-block btn-primary" ng-click="toggleModal()">Issue Business Clearance</button>
         </div>
         
         <br />
