--- a/views/cert-of-closure-list.html
+++ b/views/cert-of-closure-list.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-md-3 col-md-offset-5">
-            <button class="btn btn-block btn-primary" ng-click="toggleModal()">New Residence</button>
+            <button class="btn btn-block btn-primary" ng-click="toggleModal()">Issue Certificate of Closure</button>
         </div>
         
         <br />
