--- a/views/form-parents.html
+++ b/views/form-parents.html
@@ -31,7 +31,7 @@
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherMiddleName.$invalid }">
                             <label for="fatherMiddleName">Middle Name</label>
-                            <input class="form-control" name="fatherMiddleName" type="text" placeholder="Santiago" ng-model="vm.person.fatherMiddleName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="fatherMiddleName" type="text" placeholder="Garcia" ng-model="vm.person.fatherMiddleName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                 </div>
@@ -76,19 +76,19 @@
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherFirstName.$invalid }">
                             <label for="firstName">First Name</label>
-                            <input class="form-control" name="motherFirstName" type="text" placeholder="Juan" ng-model="vm.person.motherFirstName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherFirstName" type="text" placeholder="Victoria" ng-model="vm.person.motherFirstName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherLastName.$invalid }">
                             <label for="lastName">Last Name</label>
-                            <input class="form-control" name="motherLastName" type="text" placeholder="Dela Cruz" ng-model="vm.person.motherLastName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherLastName" type="text" placeholder="Santiago" ng-model="vm.person.motherLastName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherMiddleName.$invalid }">
                             <label for="middleName">Middle Name</label>
-                            <input class="form-control" name="motherMiddleName" type="text" placeholder="Santiago" ng-model="vm.person.motherMiddleName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherMiddleName" type="text" placeholder="Mendoza" ng-model="vm.person.motherMiddleName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="dateOfBirth">Date of Birth</label>
-                            <input class="form-control" name="motherDateOfBirth" ng-model="vm.person.dateOfBirth" type="date">
+                            <input class="form-control" name="motherDateOfBirth" ng-model="vm.person.motherDateOfBirth" type="date">
                         </div>
                     </div>
                     <!-- <div class="col-md-3">
@@ -114,7 +114,7 @@
     </div>
     <!-- /.row -->
     <p></p>
-    <p>{{vm.person}}</p>
+    <!-- <p>{{vm.person}}</p> -->
     <br />
     <br />
     
