--- a/views/reports/brgy-clearance.html
+++ b/views/reports/brgy-clearance.html
@@ -3,13 +3,15 @@
 	
 <!-- 	</head>
 	<body> -->
-		<iframe id="frm_print_baranggay_clearance" style="width:80%; height:630px;"></iframe>
+		<iframe id="frm_print_baranggay_clearance" style="width:100%; height:630px;"></iframe>
+		<p>{{vm.person}}</p>
 		<div id="body_baranggay_clearance" style="display:none;">
-			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is to certify that <strong>Abraham, Abigail A.</strong> ,legal age, single/married, Filipino citizen is a bonafide resident of <strong>1246 Everett Avenue</strong> He/she is known to me with Good Moral character. law abiding citizen in the community. He/she has <strong>NO CRIMINAL RECORD </strong>found in our Barangay Records.</p>
+			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is to certify that <strong>{{vm.person.last_name}}, {{vm.person.first_name}} {{vm.person.middle_name.charAt(0)}}.</strong> ,legal age, single/married, Filipino citizen is a bonafide resident of <strong>Block {{vm.residence.block_no}} Lot {{vm.residence.lot_no}}, {{vm.residence.street}} St., Sitio {{vm.residence.sitio}}, {{vm.residence.subdivision}} Subdivision, Brgy. {{vm.residence.barangay}}, {{vm.residence.city}} City {{vm.residence.zip}}, {{vm.residence.province}}</strong> He/she is known to me with Good Moral character. law abiding citizen in the community. He/she has <strong>NO CRIMINAL RECORD </strong>found in our Barangay Records.</p>
 
-			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This certification is being issued upon the request of the above-named person to support his/her <strong>sadsadsadsa</strong> requirement purpose only.</p>
 
-			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Given and signed this <strong>19th</strong> day of <strong>October 2015</strong> at Barangay II, Kabankalan City, Negros Occidental.</p>
+			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This certification is being issued upon the request of the above-named person to support his/her <strong>{{vm.purpose}}</strong> requirement purpose only.</p>
+
+			<p class="margin-bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Given and signed this <strong>{{vm.day}}</strong> day of <strong>{{vm.month}} {{vm.year}}</strong> at Barangay II, Kabankalan City, Negros Occidental.</p>
 		</div>
 	<!-- </body> -->
 	<!--
