--- a/views/residences.html
+++ b/views/residences.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-md-offset-5">
+        <div class="col-md-3 col-md-offset-6">
             <button class="btn btn-block btn-primary" ng-click="toggleModal()">New Residence</button>
         </div>
         
@@ -40,7 +40,7 @@
                             <tbody>
                                 <tr ng-repeat="row in vm.residences | filter:searchKey">
                                     <td>{{row.id}}</td>
-                                    <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.brgy}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
+                                    <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.barangay}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
                                     <td>
                                         <button type="button" ng-click="" class="btn btn-sm btn-success">
                                             <i class="fa fa-eye"></i>
