--- a/views/brgy-bus-clearance-list.html
+++ b/views/brgy-bus-clearance-list.html
@@ -14,7 +14,7 @@
             </div>
         </div>
          <div class="col-md-3 col-md-offset-6">
-            <button class="btn btn-block btn-primary" ng-click="toggleModal()">Issue Business Clearance</button>
+            <button class="btn btn-block btn-primary" ng-click="toggleListOfPersonsModal()">Issue Business Clearance</button>
         </div>
         
         <br />
@@ -33,27 +33,25 @@
                         <table st-table="rowCollection" class="table table-striped" >
                             <thead>
                                 <tr>
-                                    <th>Residence Id</th>
-                                    <th>Address</th>                                  
+                                    <th>Id</th>
+                                    <th>Owner</th>
+                                    <th>Business Name</th>
+                                    <th>Business Address</th>
+                                    <th>Business Type</th>
+                                    <th>Date Issued /th>                                  
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="row in vm.residences | filter:searchKey">
+                                <tr ng-repeat="row in vm.listOfBusinessClearances | filter:searchKey">
                                     <td>{{row.id}}</td>
-                                    <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.brgy}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
-                                    <td>
-                                        <button type="button" ng-click="" class="btn btn-sm btn-success">
-                                            <i class="fa fa-eye"></i>
-                                        </button>
-                                        &nbsp;
-                                        <button type="button" ng-click="" class="btn btn-sm btn-primary">
-                                            <i class="fa fa-pencil"></i>
-                                        </button>
-                                        &nbsp;
-                                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
-                                            <i class="fa fa-trash-o"></i>
-                                        </button>
-                                    </td>
+                                    <!-- <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.brgy}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
+                                    <td> -->
+                                    <td>{{row.first_name}} {{row.middle_name.charAt(0)}}. {{row.last_name}}</td>
+                                    <td>{{row.business_name}}</td>
+                                    <td>{{row.business_address}}</td>
+                                    <td>{{row.business_type}}</td>
+                                    <td>{{row.date_issued | amDateFormat:'MM/D/YYYY'}}</td>
+                                       
                                 </tr>
                             </tbody>
                         </table>
@@ -66,87 +64,94 @@
         <!-- /.col -->
     </div>
     <div ui-view></div>
+
+    <modal title="List Of Persons" visible="showListOfPersons">
+
+        <div class="col-md-4">
+            <div class="input-group input-group-md add-on">
+                <input type="text" class="form-control search-query" ng-model="searchKey"  placeholder="Search">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                </div>
+            </div>
+        </div>
+        
+        <br />
+        <br />
+        <br />
+        <div class="col-md-12">
+            <div class="box">
+                <div class="box-header">
+                </div>
+                <!-- /.box-header -->
+                <div class="box-title">
+                </div>
+                <!-- /.box-title -->
+                <div class="box-body">
+                    <div class="col-md-12">
+                        <table st-table="rowCollection" class="table table-striped" >
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Gender</th>
+                                    <th>Address</th>   
+                                    <th>Action</th>                               
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="row in vm.persons | filter: searchKey">
+                                    <td>{{row.first_name}} {{row.middle_name.charAt(0)}}. {{row.last_name}}</td>
+                                    <td>{{row.gender}}</td>
+                                    <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.brgy}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
+                                    <td>
+                                        <button type="button" ng-click="promptBusinessInfo($index, row.id)" class="btn btn-sm btn-success">
+                                                                                    <i class="fa fa-print"></i>
+                                                                                </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+        </div>
+        <!-- /.col -->
+    </div>
+    </modal>
     
-    <modal title="Add New Residence" visible="showModal">
-        <!-- form start -->
+     <modal title="Barangay Business Clearance" visible="showBusinessInfoModal" >
         <form role="form">
             <div class="box-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="blockNo">Block No</label>
-                            <input class="form-control" id="blockNo" type="text" placeholder="8" ng-model="vm.residence.blockNo">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="lotNo">Lot No</label>
-                            <input class="form-control" id="lotNo" type="text" placeholder="1" ng-model="vm.residence.lotNo">
-                        </div>
-                    </div>
 
-                    <div class="col-md-4">
                         <div class="form-group">
-                            <label for="street">Street</label>
-                            <input class="form-control" id="street" type="text" placeholder="Adela" ng-model="vm.residence.street">
+                            <label for="barangay">Business Owner</label>
+                            <input class="form-control"  type="text" placeholder="Juan Dela Cruz" ng-model="vm.businessOwner" disabled="">
                         </div>
-                    </div>
-                    </div>
-                <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="sitio">Sitio/Purok</label>
-                            <input class="form-control" id="sitio" type="text" placeholder="Naga" ng-model="vm.residence.sitio">
-                        </div>
-                    </div>
-                
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="subdivision">Subdivision</label>
-                            <input class="form-control" id="subdivision" type="text" placeholder="FZO" ng-model="vm.residence.subdivision">
-                        </div>
-                    </div>
 
-                     
-                    <div class="col-md-4">
                         <div class="form-group">
-                            <label for="brgy">Barangay</label>
-                            <input class="form-control" id="brgy" type="text" placeholder="1" ng-model="vm.residence.brgy" disabled>
+                            <label for="barangay">Business Name</label>
+                            <input class="form-control"  type="text" placeholder="Fix N' Mix" ng-model="vm.businessName" autofocus>
                         </div>
-                    </div>
-
-                    </div>
-                <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-4">
+                        
                         <div class="form-group">
-                            <label for="city">City</label>
-                            <input class="form-control" id="city" type="text" placeholder="Kabankalan" ng-model="vm.residence.city" disabled>
+                            <label for="barangay">Business Address</label>
+                            <textarea class="form-control"  type="text" placeholder="Brgy. 1, Kabankalan City" ng-model="vm.businessAddress"> </textarea>
                         </div>
-                    </div>
-
-                    <div class="col-md-4">
                         <div class="form-group">
-                            <label for="province">Province</label>
-                            <input class="form-control" id="province" type="text" placeholder="Negros Occidental" ng-model="vm.residence.province" disabled>
+                            <label for="barangay">Business Type</label>
+                            <input class="form-control"  type="text" placeholder="Bake Shop" ng-model="vm.businessType"> 
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="zip">Zip Code</label>
-                            <input class="form-control" id="zip" type="text" placeholder="6111" ng-model="vm.residence.zip" disabled>
-                        </div>
-                    </div>
-
-                </div>
-                
-                
+                        
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="vm.save(vm.residence)">Save changes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="printPreview()" >Print Preview</button>
             </div>
         </form>
     </modal>
+
 </div>
+
+
